CHATS_SIT/force-app/main/default/objects/batchsit_t_batch_log__x/batchsit_t_batch_log__x.object-meta.xml
<CustomObject>
    <description>Batch run status from batch schema</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_batch_log</externalName>
    <label>Batch External Log</label>
    <pluralLabel>Batch External Logs</pluralLabel>
</CustomObject>