CHATS_SIT/force-app/main/default/objects/batchsit_t_batch_log__x/fields/batch_name__c.field-meta.xml
<CustomField>
    <fullName>batch_name__c</fullName>
    <externalDeveloperName>batch_name</externalDeveloperName>
    <label>batch name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>