CHATS_SIT/force-app/main/default/objects/batchsit_t_batch_log__x/fields/batch_run_date__c.field-meta.xml
<CustomField>
    <fullName>batch_run_date__c</fullName>
    <externalDeveloperName>batch_run_date</externalDeveloperName>
    <label>batch run date</label>
    <type>Date</type>
</CustomField>