CHATS_SIT/force-app/main/default/objects/batchsit_t_batch_log__x/fields/end_time__c.field-meta.xml
<CustomField>
    <fullName>end_time__c</fullName>
    <externalDeveloperName>end_time</externalDeveloperName>
    <label>end time</label>
    <type>DateTime</type>
</CustomField>