CHATS_SIT/force-app/main/default/objects/batchsit_t_batch_log__x/fields/error_message__c.field-meta.xml
<CustomField>
    <fullName>error_message__c</fullName>
    <externalDeveloperName>error_message</externalDeveloperName>
    <label>error message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>