CHATS_SIT/force-app/main/default/objects/batchsit_t_batch_log__x/fields/idn_batch_log__c.field-meta.xml
<CustomField>
    <fullName>idn_batch_log__c</fullName>
    <externalDeveloperName>idn_batch_log</externalDeveloperName>
    <label>idn batch log</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>