CHATS_SIT/force-app/main/default/objects/batchsit_t_batch_log__x/fields/idn_extnl__c.field-meta.xml
<CustomField>
    <fullName>idn_extnl__c</fullName>
    <externalDeveloperName>idn_extnl</externalDeveloperName>
    <label>idn extnl</label>
    <length>50</length>
    <type>Text</type>
</CustomField>