CHATS_SIT/force-app/main/default/objects/batchsit_t_batch_log__x/fields/ind_sched__c.field-meta.xml
<CustomField>
    <fullName>ind_sched__c</fullName>
    <description>ind scheduled - Daily or Day Batch</description>
    <externalDeveloperName>ind_sched</externalDeveloperName>
    <label>ind sched</label>
    <length>200</length>
    <type>Text</type>
</CustomField>