CHATS_SIT/force-app/main/default/objects/batchsit_t_batch_log__x/fields/lastmodifieddate__c.field-meta.xml
<CustomField>
    <fullName>lastmodifieddate__c</fullName>
    <externalDeveloperName>lastmodifieddate</externalDeveloperName>
    <label>lastmodifieddate</label>
    <type>DateTime</type>
</CustomField>