CHATS_SIT/force-app/main/default/objects/batchsit_t_batch_log__x/fields/records_failed__c.field-meta.xml
<CustomField>
    <fullName>records_failed__c</fullName>
    <externalDeveloperName>records_failed</externalDeveloperName>
    <label>records failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>