CHATS_SIT/force-app/main/default/objects/batchsit_t_batch_log__x/fields/records_processed__c.field-meta.xml
<CustomField>
    <fullName>records_processed__c</fullName>
    <externalDeveloperName>records_processed</externalDeveloperName>
    <label>records processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>