CHATS_SIT/force-app/main/default/objects/batchsit_t_batch_log__x/fields/start_time__c.field-meta.xml
<CustomField>
    <fullName>start_time__c</fullName>
    <externalDeveloperName>start_time</externalDeveloperName>
    <label>start time</label>
    <type>DateTime</type>
</CustomField>