CHATS_SIT/force-app/main/default/objects/batchsit_t_batch_log__x/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <externalDeveloperName>status</externalDeveloperName>
    <label>status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>